added comments to html file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Gradient Background</title>
 </head>
 <body>
+	<!-- see detailed description on js file -->
 	<h1>Background Generator</h1>
 	<input type="color" class="color1" name="color1" value="#a8a857">
 	<input type="color" class="color2" name="color2" value="#f70968"><br>
